# futures-dashboard

./: .env.example  .gitignore  README.md  main.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.agents/memory/: MEMORY.md
artifacts/api-server/: package.json
artifacts/api-server/src/: app.ts
artifacts/api-server/src/lib/: adaptiveEngine.ts  botConfig.ts  botModes.ts  candleEdge.ts  telemetryStore.ts
artifacts/api-server/src/routes/: bingx.ts  bot.ts  demo.ts  telemetry.ts
artifacts/bingx-dashboard/: .env.production  .gitignore  README.md  package.json  vercel.json  vite.config.ts
artifacts/bingx-dashboard/src/: App.tsx  index.css
artifacts/bingx-dashboard/src/api-client/: trigger-hooks.ts
artifacts/bingx-dashboard/src/components/: app-shell.tsx
artifacts/mockup-sandbox/: .tsbuildinfo  vite.config.ts
artifacts/quant-brain/: main.py  requirements.txt
artifacts/quant-brain/analyst/: ai_analyst.py
artifacts/quant-brain/api/: server.py
artifacts/quant-brain/core/: feature_engine.py  knowledge_base.py
artifacts/quant-brain/data/: knowledge.db
artifacts/quant-brain/layers/: strategic.py  tactical.py
backend/: .env.example  README.md  pnpm-lock.yaml
backend/src/lib/: adaptiveEngine.ts  botConfig.ts  botModes.ts  candleEdge.ts  executionRisk.ts  logger.ts  telemetryStore.ts
backend/src/routes/: bot.ts  demo.ts
contracts/: quant-brain-edge-v3.json
lib/api-spec/: openapi.yaml
scripts/: reset-cloud-runtime-data.sh  reset-local-learning-data.ps1  reset-quant-brain-learning.sql
(+13 files in other folders)
