[project]
name = "bingx-authenticator-panel"
version = "0.1.0"
description = "Local Python services for the BingX Authenticator Panel workspace."
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.14.0",
    "aiosqlite>=0.22.1",
    "anthropic>=0.105.2",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "numpy>=2.4.6",
    "uvicorn>=0.49.0",
]
